refactor: organize automated flows separately from commands
- Created flows/ directory for event-triggered automations
- Moved auto-preview to flows/auto-preview-release-after-pr
- Added auto-create-changeset-on-pr flow for automatic changeset generation
- Updated make.js to support flows in solution configuration
- Clear separation: commands (user-triggered) vs flows (event-triggered)

--- a/solutions/node-opensource/solution.yml
+++ b/solutions/node-opensource/solution.yml
@@ -10,12 +10,17 @@ components:
   
   # 启用的命令
   commands:
-    - start      # /start issue - 开始开发
+    - start      # /start development|release - 开始开发或发布
     - pr         # /pr - 创建 Pull Request
     - test       # /test - 运行测试
-    - changeset  # /changeset - 声明变更
+    - changeset  # /changeset - 声明变更（默认自动分析）
     - release    # /release - 创建版本
     - publish    # /publish - 发布到 NPM
+  
+  # 自动化流程
+  flows:
+    - auto-preview-release-after-pr    # PR 合并后自动预览发布状态
+    - auto-create-changeset-on-pr      # PR 创建时自动生成 changeset
   
   # Issue 标签
   labels:
