fix: trim label type to avoid invalid branch names
- Add trim() when extracting type from label to remove spaces
- Prevents creating branches with invalid names like ' feature/15-'
- Fixes GitHub Actions workflow failure

--- a/.github/workflows/start.yml
+++ b/.github/workflows/start.yml
@@ -98,7 +98,7 @@ jobs:
             
             // Extract type from labels
             const typeLabel = issue.labels.find(l => l.name.startsWith('type:'));
-            const type = typeLabel ? typeLabel.name.split(':')[1] : 'feature';
+            const type = typeLabel ? typeLabel.name.split(':')[1].trim() : 'feature';
             
             // Create branch name
             const sanitizedTitle = issue.title
