--- a/.github/workflows/start.yml
+++ b/.github/workflows/start.yml
@@ -101,13 +101,7 @@ jobs:
             const type = typeLabel ? typeLabel.name.split(':')[1].trim() : 'feature';
             
             // Create branch name
-            const sanitizedTitle = issue.title
-              .toLowerCase()
-              .replace(/[^a-z0-9]+/g, '-')
-              .replace(/^-|-$/g, '')
-              .substring(0, 50);
-            
-            const branchName = `${type}/#${issueNumber}-${sanitizedTitle}`;
+            const branchName = `${type}/#${issueNumber}-issue`;
             
             core.setOutput('title', issue.title);
             core.setOutput('number', issueNumber);
