fix: simplify branch naming to match actual implementation
- Changed branch naming from 'type/issue-title' to 'type/#issue-issue'
- This matches the actual branch creation behavior
- Ensures bot response shows correct branch name

--- a/commands/start/start.yml
+++ b/commands/start/start.yml
@@ -101,13 +101,8 @@ jobs:
             const type = typeLabel ? typeLabel.name.split(':')[1].trim() : 'feature';
             
             // Create branch name
-            const sanitizedTitle = issue.title
-              .toLowerCase()
-              .replace(/[^a-z0-9]+/g, '-')
-              .replace(/^-|-$/g, '')
-              .substring(0, 50);
-            
-            const branchName = `${type}/${issueNumber}-${sanitizedTitle}`;
+            // Simple format: type/#issue-issue
+            const branchName = `${type}/#${issueNumber}-issue`;
             
             core.setOutput('title', issue.title);
             core.setOutput('number', issueNumber);
