--- a/events/pr-opened/pr-opened.yml
+++ b/events/pr-opened/pr-opened.yml
@@ -58,6 +58,8 @@ jobs:
         if: steps.check.outputs.should_trigger == 'true'
         uses: actions/github-script@v7
         with:
+          # Use PAT_TOKEN if available to trigger subsequent workflows
+          github-token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
           script: |
             const prNumber = ${{ steps.check.outputs.pr_number }};
             
@@ -76,6 +78,8 @@ jobs:
         if: steps.check.outputs.should_trigger == 'true'
         uses: actions/github-script@v7
         with:
+          # Use PAT_TOKEN if available to trigger subsequent workflows
+          github-token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
           script: |
             const prNumber = ${{ steps.check.outputs.pr_number }};
             
