--- a/.github/workflows/start.yml
+++ b/.github/workflows/start.yml
@@ -569,6 +569,22 @@ jobs:
       pull-requests: write
       
     steps:
+      # 添加初始反应 - 表示收到命令
+      - name: Add initial reaction
+        uses: actions/github-script@v7
+        with:
+          script: |
+            try {
+              await github.rest.reactions.createForIssueComment({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                comment_id: context.payload.comment.id,
+                content: 'eyes'
+              });
+            } catch (e) {
+              console.log('Failed to add reaction:', e.message);
+            }
+      
       - name: Parse command
         id: parse
         uses: actions/github-script@v7
