--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,10 +6,10 @@ on:
 
 jobs:
   handle-publish:
-    # 只在 issue/PR 评论中以 /publish 开头时运行
+    # 只在 issue/PR 评论中包含 /publish 命令时运行
     if: |
       github.event.issue &&
-      startsWith(github.event.comment.body, '/publish')
+      contains(github.event.comment.body, '/publish')
     
     runs-on: ubuntu-latest
     
