--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -547,6 +547,31 @@ jobs:
               content: 'rocket'
             });
       
+      - name: Handle release failure
+        if: |
+          failure() &&
+          steps.permissions.outputs.allowed == 'true' &&
+          steps.parse.outputs.preview != 'true' &&
+          (steps.changesets.outputs.has_changesets == 'true' || 
+           steps.parse.outputs.graduate == 'true' ||
+           steps.changesets.outputs.skip_check == 'true')
+        uses: actions/github-script@v7
+        with:
+          script: |
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              body: `❌ **Release failed**\n\nThe release process encountered an error. Please check the workflow logs for details.\n\nCommon issues:\n- Git configuration missing\n- Permission issues\n- Network problems\n\nYou can retry with \`/release ${{ steps.parse.outputs.prerelease || '' }}\``
+            });
+            
+            await github.rest.reactions.createForIssueComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              comment_id: context.payload.comment.id,
+              content: '-1'
+            });
+      
       - name: Handle no changesets
         if: |
           steps.permissions.outputs.allowed == 'true' &&
