--- a/.github/workflows/pr-merged-develop.yml
+++ b/.github/workflows/pr-merged-develop.yml
@@ -51,6 +51,8 @@ jobs:
       - name: Post merge notification
         uses: actions/github-script@v7
         with:
+          # Use PAT_TOKEN if available for consistency
+          github-token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
           script: |
             const pr = context.payload.pull_request;
             const changesetCount = '${{ steps.check.outputs.changeset_count }}';
@@ -84,6 +86,8 @@ jobs:
         if: steps.check.outputs.has_changesets == 'true'
         uses: actions/github-script@v7
         with:
+          # Use PAT_TOKEN if available to trigger subsequent workflows
+          github-token: ${{ secrets.PAT_TOKEN || secrets.GITHUB_TOKEN }}
           script: |
             const pr = context.payload.pull_request;
             
